# flicker

./: Cargo.toml  README.md
benches/: tiger.rs
examples/: svg.rs
src/: bbox.rs  flatten.rs  geom.rs  lib.rs  raster.rs  render.rs
src/pipeline/: avx2.rs  mod.rs  neon.rs  scalar.rs  sse2.rs
svg/src/: lib.rs
