[package]
name = "flicker"
version = "0.1.0"
authors = ["Micah Johnston <micah@glowcoil.com>"]
edition = "2021"
publish = false

[dependencies]
rustybuzz = "0.11.0"

[dev-dependencies]
svg = { path = "svg" }
criterion = { version = "0.3", features = ["html_reports"] }
portlight = { git = "https://github.com/coupler-rs/portlight", rev = "fff171e9f3f70a9604102e1e1877ad67d0c2badd" }

[[bench]]
name = "tiger"
harness = false

[workspace]
members = [
    "svg"
]
